# intoduction-to-c-for-android-developers

./: .gitignore  CMakeLists.txt  helloworld.c
dynamic-library/: standart-inverse-square-root.c  standart-inverse-square-root.h
static-library/: fast-inverse-square-root.c  fast-inverse-square-root.h
